# video_if_ql_vga

./: CMakeLists.txt  README.md  main.cc  system_defs.h  video_if_ql_vga_minipico.uf2
case/: video_if_ql_vga-body.stl  video_if_ql_vga-lid.stl
doc/: ibom.html  pcb.md
pcb/: video_if_ql_vga.kicad_pcb  video_if_ql_vga.kicad_pro  video_if_ql_vga.kicad_sch
pcb/gerbers/: video_if_ql_vga-B_Cu.gbr  video_if_ql_vga-B_Mask.gbr  video_if_ql_vga-B_Paste.gbr  video_if_ql_vga-B_Silkscreen.gbr  video_if_ql_vga-Edge_Cuts.gbr  video_if_ql_vga-F_Cu.gbr  video_if_ql_vga-F_Mask.gbr  video_if_ql_vga-F_Paste.gbr  video_if_ql_vga-F_Silkscreen.gbr  video_if_ql_vga-job.gbrjob  video_if_ql_vga.drl
sampling/: sample_input.cc  sample_input.h
signalproc/: hires_buffer_index.h  video_inproc.cc  video_inproc.h
video_out/: charset_code.inc  generate_char_pattern.py  vid_render.cc  vid_render.h
video_out/vga/: vga_6bit.c  vga_6bit.h  vga_6bit.pio
